Agregando vistas nuevas
vista about y login

--- a/wf_repo_inven/Views/Home/About.cshtml
+++ b/wf_repo_inven/Views/Home/About.cshtml
@@ -1,7 +1,48 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "Hecho por:";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>@ViewBag.Title</h2>
 
-<p>Use this area to provide additional information.</p>
+
+<table class="table">
+    <thead class="thead-light">
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Nombres</th>
+            <th scope="col">Apellidos</th>
+            <th scope="col">Carnet</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <th scope="row">1</th>
+            <td>Manuel Alexander</td>
+            <td>Vazques Rafaelano</td>
+            <td>25-0081-2015</td>
+        </tr>
+        <tr>
+            <th scope="row">2</th>
+            <td>Ricardo Ernesto</td>
+            <td>Chicas Murcia</td>
+            <td>25-0723-2014</td>
+        </tr>
+        <tr>
+            <th scope="row">3</th>
+            <td>Wonnyo Selmira</td>
+            <td>Hamester Tozawa</td>
+            <td>25-2960-2014</td>
+        </tr>
+        <tr>
+            <th scope="row">4</th>
+            <td>Aaron Alejandro</td>
+            <td>Reinosa Valdez</td>
+            <td>25-0712-2015</td>
+        </tr>
+        <tr>
+            <th scope="row">5</th>
+            <td>Jesus Ernesto</td>
+            <td>Zelaya Garcia</td>
+            <td>25-3033-2015</td>
+        </tr>
+    </tbody>
+</table>
