--- a/wf_repo_inven/Views/Home/Index.cshtml
+++ b/wf_repo_inven/Views/Home/Index.cshtml
@@ -1,37 +1,31 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-    
+
+<div class="jumbotron">
+    <h1>ASP.NET</h1>
+    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
+    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+</div>
+
 <div class="row">
-    <div class="col-md-12">
-        <h2 class="text-center">Reportes control de inventario</h2>
-        <h3 class="text-center">(productos perecederos)</h3>
+    <div class="col-md-4">
+        <h2>Getting started</h2>
+        <p>
+            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
+            enables a clean separation of concerns and gives you full control over markup
+            for enjoyable, agile development.
+        </p>
+        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+    </div>
+    <div class="col-md-4">
+        <h2>Get more libraries</h2>
+        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
+        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+    </div>
+    <div class="col-md-4">
+        <h2>Web Hosting</h2>
+        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
-<div class="row">
-    <div class="col-md-4">
-        
-    </div>
-    <div class="col-md-4">
-        <div class="panel panel-default">
-            <form>
-                <div class="form-group">
-                    <label class=" form-control text-center">Usuario:</label>
-                    <input type="text" class="form-control center-block" id="user" aria-describedby="emailHelp" placeholder="Digite su usuario">
-                </div>
-                <br/>
-                <div class="form-group">
-                    <label class="form-control text-center">Contraseña</label>
-                    <input type="password" class="form-control center-block" id="exampleInputPassword1" placeholder="Password">
-                </div>
-                
-                <button type="submit" class="btn btn-primary center-block">Iniciar Sesion</button>
-                <br/>
-            </form>
-        </div>
-            
-        </div>
-        <div class="col-md-4">
-
-        </div>
-   </div>
